--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Calculator</title>
     </head>
     <body>
+        <div id="calculator">
+            <div class="visor">123</div>
+            <div class="digits">
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
+                <button class="digit">0</button>
+            </div>
+            <div class="operators">
+                <button class="function">AC</button>
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">x</button>
+                <button class="operator">/</button>
+                <button class="function">=</button>
+            </div>
+        </div>
         <script src="./js/calculator.js"></script>
     </body>
 </html>
