Feat: make visor show result and last calculation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
     <body>
         <div id="calculator">
-            <div class="visor">123</div>
+            <div class="visor">
+                <p class="previous">1+2</p>
+                <p class="current">3</p>
+            </div>
             <div class="buttons">
                 <div class="digits">
                     <button class="digit">7</button>
@@ -27,8 +30,8 @@
                     <button class="operator">-</button>
                     <button class="operator">x</button>
                     <button class="operator">/</button>
-                    <button class="function">=</button>
                     <button class="function">AC</button>
+                    <button class="function">=</button>
                 </div>
             </div>
         </div>
