--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="calculator">
             <div class="visor">
-                <p class="previous">1+2</p>
-                <p class="current">3</p>
+                <p class="previous"></p>
+                <p class="current"></p>
             </div>
             <div class="buttons">
                 <div class="digits">
