Fix: make division by 0 show error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <button class="digit">1</button>
                     <button class="digit">2</button>
                     <button class="digit">3</button>
-                    <button class="digit">0</button>
+                    <button id="zero" class="digit">0</button>
                 </div>
                 <div class="operators">
                     <button class="operator">+</button>
